# git-rel

./: README.md  commit_msg.txt  pyproject.toml
src/git_rel/: __init__.py  changelog.py  cli.py  github.py
src/git_rel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
